Scheduler stuff with Alon

--- a/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
+++ b/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
@@ -21,14 +21,15 @@
 		<add key="Edge.Core.Scheduling.Scheduler.DeleteEndedServiceInterval" value="23:59:00" />
 	</appSettings>
 	<connectionStrings>
-		<add name="Edge.Data.Pipeline.Delivery.DB" connectionString="Data Source=alonya-pc;Initial Catalog=edge_system;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
-		<add name="Edge.Core.Services.SystemDatabase" connectionString="Data Source=alonya-pc; Database=edge_system;User ID=sa;PWD=Iuh2sstd"/>
+		<add name="Edge.Data.Pipeline.Delivery.DB" connectionString="Data Source=alonya-pc;Initial Catalog=edge_system291;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
+		<add name="Edge.Core.Services.SystemDatabase" connectionString="Data Source=alonya-pc; Database=edge_system291;User ID=sa;PWD=Iuh2sstd"/>
 		<add name="Edge.Data.Pipeline.Delivery.Sql.DeliveriesDb" connectionString="Data Source=alonya-pc;Initial Catalog=Deliveries;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
-		<add name="Edge.Services.AdMetrics.AdMetricsImportManager.OLTP" connectionString="Data Source=79.125.11.74;Initial Catalog=Seperia;User ID=edge1;PWD=Blublu*2!"/>
+		<add name="Edge.Services.AdMetrics.AdMetricsImportManager.OLTP" connectionString="Data Source=alonya-pc;Initial Catalog=testdb;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
 		<add name="Edge.Core.Scheduling.Scheduler.OLTP" connectionString="Data Source=alonya-pc;Initial Catalog=testdb;Integrated Security=false;User ID=sa;PWD=Iuh2sstd" />
+		<add name="Edge.Data.Pipeline.Metrics.AdMetrics.AdMetricsImportManager.StagingDatabase" connectionString="Data Source=alonya-pc;Initial Catalog=testdb;Integrated Security=false;User ID=sa;PWD=Iuh2sstd" />
 		<!--Adwords-->
-		<add name="Edge.Services.Google.Adwords.AdwordsReport.SystemDatabase" connectionString="Data Source=79.125.11.74; Database=Seperia;User ID=edge1;PWD=Blublu*2!"/>
-		<add name="Edge.Services.Google.Adwords.GoogleUserEntity.MCC_Auth" connectionString="Data Source=79.125.11.74; Database=Seperia;User ID=edge1;PWD=Blublu*2!"/>
+		<!--<add name="Edge.Services.Google.Adwords.AdwordsReport.SystemDatabase" connectionString="Data Source=79.125.11.74; Database=Seperia;User ID=edge1;PWD=Blublu*2!"/>
+		<add name="Edge.Services.Google.Adwords.GoogleUserEntity.MCC_Auth" connectionString="Data Source=79.125.11.74; Database=Seperia;User ID=edge1;PWD=Blublu*2!"/>-->
 		<!--Adwords-->
 
 	</connectionStrings>
@@ -138,7 +139,7 @@
 			<!-- ======== Facebook Graph API ======== -->
 			<Service Name="Facebook.GraphApi"
 						IsEnabled="true"
-						DeliveryFilesDir="Facebook"
+						FileDirectory="Facebook"
 						Class="Edge.Data.Pipeline.Services.PipelineWorkflowService,Edge.Data.Pipeline"
 						Facebook.BaseServiceAdress="https://graph.facebook.com"
 					    Facebook.AuthenticationUrl="https://graph.facebook.com/oauth/access_token?client_id={0}&amp;redirect_uri={1}&amp;client_secret={2}&amp;code={3}"
@@ -156,10 +157,10 @@
 					<Step Base="FacebookGraphApiInitializerService" />
 					<Step Base="FacebookGraphApiRetrieverService"  />
 					<Step Base="FacebookGraphApiProcessorService"  />
-					<Step Base="AdMetricsCommit"/>
+					<!--<Step Base="AdMetricsCommit"/>
 					<Step Base="DataChecks.OltpDelivery"  IsEnabled="false" SourceTable="dbo.Paid_API_AllColumns_v29" ChannelList="1"/>
 					<Step Base="DataChecks.ResultsHandler"  IsEnabled="false" AlertFrom="edgeapp@edge.bi" AlertTo="edge.alerts@seperia.com"
-						  CC="sms-0522321243@outlook.wms.telemessage.com,sms-0542444443@outlook.wms.telemessage.com,sms-0544922188@outlook.wms.telemessage.com,shmely@gmail.com,sms-0522499272@outlook.wms.telemessage.com" />
+						  CC="sms-0522321243@outlook.wms.telemessage.com,sms-0542444443@outlook.wms.telemessage.com,sms-0544922188@outlook.wms.telemessage.com,shmely@gmail.com,sms-0522499272@outlook.wms.telemessage.com" />-->
 				</Workflow>
 				<SchedulingRules>
 					<Rule ExactTimes="09:00" CalendarUnit="Day" MaxDeviation="1:15"  />
@@ -167,7 +168,7 @@
 			</Service>
 
 			<Service Name="FacebookGraphApiInitializerService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.InitializerService,Edge.Services.Facebook.GraphApi" MaxInstances="50"	MaxInstancesPerAccount="1"/>
-			<Service Name="FacebookGraphApiRetrieverService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.RetrieverService,Edge.Services.Facebook.GraphApi" MaxInstances="1"	MaxInstancesPerAccount="1"/>
+			<Service Name="FacebookGraphApiRetrieverService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.RetrieverService,Edge.Services.Facebook.GraphApi" MaxInstances="2" 	MaxInstancesPerAccount="1"/>
 			<Service Name="FacebookGraphApiProcessorService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.ProcessorService,Edge.Services.Facebook.GraphApi" AutoAdGroupSegment="true" AdGroupDelimiter="@" MaxInstances="4"	MaxInstancesPerAccount="1"/>
 
 		
