--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -2,8 +2,9 @@
 <configuration>
 	<configSections>
 		<section name="TargetApplicationsConfiguration" type="SchedulersGuards.TargetApplicationsConfiguration,SchedulersGuards"/>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
 	</configSections>
-	<appSettings>		
+	<appSettings>
 		<add key="Edge.Core.Scheduling.Scheduler.Percentile" value="80"/>
 		<add key="Edge.Core.Scheduling.Scheduler.NeededScheduleTimeLine" value="02:00:00"/>
 		<add key="Edge.Core.Scheduling.Scheduler.IntervalBetweenNewSchedule" value="00:00:10"/>
@@ -15,31 +16,32 @@
 		<add key="Edge.Core.Scheduling.Scheduler.MaxExecutionTimeChildService" value="4"/>
 		<add key="log4net.Internal.Debug" value="true"/>
 	</appSettings>
-	<connectionStrings>		
+	<connectionStrings>
 		<add name="Edge.Core.Scheduling.Scheduler.OLTP" connectionString="Data Source=alonya-pc;Initial Catalog=testdb;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
-		<add name="Edge.Core.Scheduling.Scheduler.System" connectionString="Data Source=alonya-pc;Initial Catalog=Edge_System;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
+		<add name="Edge.Core.Scheduling.Scheduler.System" connectionString="Data Source=alonya-pc;Initial Catalog=Edge_System291;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
 	</connectionStrings>
 
 	<system.serviceModel>
 		<services>
-			
-			<service name="Edge.Processes.SchedulingHost.Listener" behaviorConfiguration="behavior">
-				<endpoint binding="wsHttpBinding" bindingConfiguration="edgeServiceWebBinding" contract="Edge.Core.Scheduling.IScheduleManager" address="http://localhost:27334/v2.1/ScheduleManagerSeperia"/>				
+			<service behaviorConfiguration="behavior" name="Edge.Processes.SchedulingHost.Listener">
+				<endpoint address="http://localhost:27334/v291/ScheduleManagerSeperia"
+					binding="wsHttpBinding" bindingConfiguration="edgeServiceWebBinding"
+					contract="Edge.Core.Scheduling.IScheduleManager"
+				/>
 			</service>
-			<service name="Edge.Processes.SchedulingHost.SchedulingCommunication" >
-				<endpoint  name="Edge.Processes.SchedulingHost.SchedulingCommunication"  binding="netNamedPipeBinding" bindingConfiguration="SchedulerHostConfig" contract="Edge.Processes.SchedulingHost.SchedulingCommunication"  address="net.pipe://localhost/"/>
-				<!--<host>
-					<baseAddresses>
-						<add baseAddress="net.pipe://localhost/Scheduler"/>
-					</baseAddresses> 
-				</host>-->
+			<service name="Edge.Processes.SchedulingHost.SchedulingHost">
+				<endpoint
+					address="net.pipe://localhost/Scheduler"
+					binding="netNamedPipeBinding"
+					bindingConfiguration="Edge.Processes.SchedulingHost.SchedulingHost"
+					contract="Edge.Core.Scheduling.ISchedulingHost"
+				/>
 			</service>
-
 		</services>
 
 		<client>
-			<endpoint binding="wsHttpBinding" bindingConfiguration="edgeServiceWebBinding" contract="Edge.Core.Scheduling.IScheduleManager" address="http://localhost:27334/v2.1/ScheduleManagerSeperia"/>
-			<endpoint address="https://adcenterapi.microsoft.com/Api/Advertiser/V8/Reporting/ReportingService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReportingService" contract="AdCenter.Reporting.IReportingService" name="AdCenter.Reporting.IReportingService"/>
+			<endpoint binding="wsHttpBinding" bindingConfiguration="edgeServiceWebBinding" contract="Edge.Core.Scheduling.IScheduleManager" address="http://localhost:27334/v291/ScheduleManagerSeperia"/>
+			<!--<endpoint address="https://adcenterapi.microsoft.com/Api/Advertiser/V8/Reporting/ReportingService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReportingService" contract="AdCenter.Reporting.IReportingService" name="AdCenter.Reporting.IReportingService"/>-->
 		</client>
 		<behaviors>
 			<serviceBehaviors>
@@ -66,8 +68,134 @@
 				</binding>
 			</basicHttpBinding>
 			<netNamedPipeBinding>
-				<binding name="SchedulerHostConfig"  maxBufferPoolSize="20000000" maxConnections="20000000" maxBufferSize="20000000" maxReceivedMessageSize="20000000" closeTimeout="00:03:00" openTimeout="00:03:00" />
+				<binding name="Edge.Processes.SchedulingHost.SchedulingHost"  maxBufferPoolSize="20000000" maxConnections="20000000" maxBufferSize="20000000" maxReceivedMessageSize="20000000" closeTimeout="00:03:00" openTimeout="00:03:00" />
 			</netNamedPipeBinding>
 		</bindings>
 	</system.serviceModel>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+	</startup>
+
+
+	<log4net debug="true">
+		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="/log4net.txt" />
+			<appendToFile value="true" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="10" />
+			<maximumFileSize value="10MB" />
+			<staticLogFileName value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
+			</layout>
+		</appender>
+		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
+			<bufferSize value="1" />
+			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+			<!-- Data Source=alonya-pc;Initial Catalog=Edge_System;Integrated Security=false;User ID=sa;PWD=Iuh2sstd -->
+			<connectionString value="data source=alonya-pc;initial catalog=Edge_System291;integrated security=false;persist security info=True;User ID=sa;Password=Iuh2sstd" />
+			<commandText value="INSERT INTO Log ([DateRecorded],[MachineName],[ProcessID],[Source],[MessageType],[ServiceInstanceID],[AccountID],[Message],[IsException],[ExceptionDetails]) &#xD;&#xA;           VALUES (@dateRecorded, @machineName, @processID, @source, @messageType, @serviceInstanceID,@accountID,@message,@isException,@exceptionDetails)"
+                                                                                                                                                           />
+			<parameter>
+				<parameterName value="@dateRecorded" />
+				<dbType value="DateTime" />
+				<layout type="log4net.Layout.RawTimeStampLayout">
+					<conversionPattern value="%property{@dateRecorded}" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@machineName" />
+				<dbType value="String" />
+				<size value="255" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%property{@machineName}" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@processID" />
+				<dbType value="Int32" />
+				<size value="8" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%property{@processID}" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@source" />
+				<dbType value="String" />
+				<size value="255" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%property{@source}" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@messageType" />
+				<dbType value="Int32" />
+				<size value="8" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%property{@messageType}" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@serviceInstanceID" />
+				<dbType value="Int64" />
+				<size value="10" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%property{@serviceInstanceID}" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@accountID" />
+				<dbType value="Int32" />
+				<size value="8" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%property{@accountID}" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@message" />
+				<dbType value="String" />
+				<size value="4000" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%property{@message}" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@isException" />
+				<dbType value="Boolean" />
+				<size value="1" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%property{@isException}" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@exceptionDetails" />
+				<dbType value="String" />
+				<size value="4000" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%property{@exceptionDetails}" />
+				</layout>
+			</parameter>
+		</appender>
+		<appender name="SmtpAppender" type="log4net.Appender.SmtpAppender">
+			<to value="alon.yaari@edge.bi" />
+			<from value="alon.yaari@edge.bi" />
+			<subject value="Hello from log4net" />
+			<smtpHost value="mx.edge.bi" />
+			<bufferSize value="512" />
+			<lossy value="true" />
+			<evaluator type="log4net.Core.LevelEvaluator">
+				<threshold value="WARN"/>
+			</evaluator>
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%newline%date [%thread] %-5level %logger [%property{NDC}] - %message%newline%newline%newline" />
+			</layout>
+		</appender>
+
+		<root>
+			<level value="DEBUG" />
+			<!--<appender-ref ref="RollingLogFileAppender" />-->
+			<appender-ref ref="AdoNetAppender" />
+			<!--<appender-ref ref="SmtpAppender" />-->
+		</root>
+	</log4net>
+</configuration>
