--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -198,4 +198,17 @@
 			<!--<appender-ref ref="SmtpAppender" />-->
 		</root>
 	</log4net>
+	<!--<system.diagnostics>
+		<sources>
+			<source name="System.ServiceModel"
+                    switchValue="All"
+                    propagateActivity="true">
+				<listeners>
+					<add name="traceListener"
+						type="System.Diagnostics.XmlWriterTraceListener"
+						initializeData= "d:\log\Traces.svclog" />
+				</listeners>
+			</source>
+		</sources>
+	</system.diagnostics>-->
 </configuration>
