--- a/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
+++ b/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
@@ -904,18 +904,18 @@
 			</netTcpBinding>
 		</bindings>
 	</system.serviceModel>
-	<system.diagnostics>
+	<!--<system.diagnostics>
 		<sources>
 			<source name="System.ServiceModel"
-                    switchValue="Information, ActivityTracing"
+                    switchValue="All"
                     propagateActivity="true">
 				<listeners>
 					<add name="traceListener"
 						type="System.Diagnostics.XmlWriterTraceListener"
-						initializeData= "c:\Traces.svclog" />
+						initializeData= "d:\log\Traces.svclog" />
 				</listeners>
 			</source>
 		</sources>
-	</system.diagnostics>
+	</system.diagnostics>-->
 </configuration>
 
