--- a/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
+++ b/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
@@ -325,6 +325,18 @@
 							 DirectoryWatcherLocation="E:\Edge\Seperia\Files\Legacy\Upload\FTP\Other_Advertising_Channel"/>
 				</Services>
 			</Account>
+			<Account ID="61" Name="Seperia.com">
+				<Services>
+					<Service Uses="Facebook.GraphApi"
+							Facebook.Account.Name="Seperia.com"
+							Facebook.Account.ID="59684411"
+							Facebook.Auth.SessionSecret="AQCS2hl57gcnkvnCIdYi6ymUjr8JApWJKLE_BKY57sSfzKRekcjvrZYvhoPeun_4Xp-aDg3k0VXfHNz3XCd97JpqVMLvwyHSlcZWyPaJ8ybPagVdspEKkuSvpG_tQnWHQKVY6fI_WSrWezV24zu9OTu9PIjMv6UNKtS1TwngNfkLa7xl5kDMUfOM2i1-JZysLmU#_=_"
+							TimeZone="-8"
+							Offset="0"
+							 />
+						
+				</Services>
+			</Account>
 		</Accounts>
 		<!--<Accounts>
 			<Account ID="-1" Name="System Account">
