--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -92,7 +92,7 @@
 		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
 			<bufferSize value="1" />
 			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-			<!-- Data Source=alonya-pc;Initial Catalog=Edge_System;Integrated Security=false;User ID=sa;PWD=Iuh2sstd -->
+			 Data Source=alonya-pc;Initial Catalog=Edge_System;Integrated Security=false;User ID=sa;PWD=Iuh2sstd 
 			<connectionString value="data source=alonya-pc;initial catalog=Edge_System291;integrated security=false;persist security info=True;User ID=sa;Password=Iuh2sstd" />
 			<commandText value="INSERT INTO Log ([DateRecorded],[MachineName],[ProcessID],[Source],[MessageType],[ServiceInstanceID],[AccountID],[Message],[IsException],[ExceptionDetails]) &#xD;&#xA;           VALUES (@dateRecorded, @machineName, @processID, @source, @messageType, @serviceInstanceID,@accountID,@message,@isException,@exceptionDetails)"
                                                                                                                                                            />
