--- a/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
+++ b/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
@@ -16,11 +16,12 @@
 		<add key="Edge.Services.AdMetrics.AdMetricsImportManager.BufferSize" value="10"/>
 		<add key="Edge.Core.Scheduling.Scheduler.Percentile" value="80" />
 		<add key="Edge.Core.Scheduling.Scheduler.NeededScheduleTimeLine" value="02:00:00" />
-		<add key="Edge.Core.Scheduling.Scheduler.IntervalBetweenNewSchedule" value="00:00:10" />
+		<add key="Edge.Core.Scheduling.Scheduler.IntervalBetweenNewSchedule" value="00:10:00" />
 		<add key="Edge.Core.Scheduling.Scheduler.FindServicesToRunInterval" value="00:01" />
 		<add key="Edge.Core.Scheduling.Scheduler.DeleteEndedServiceInterval" value="23:59:00" />
 	</appSettings>
 	<connectionStrings>
+		<add name ="Edge.Processes.SchedulingHost.SchedulingHost.System" connectionString="Data Source=alonya-pc;Initial Catalog=edge_system291;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
 		<add name="Edge.Data.Pipeline.Delivery.DB" connectionString="Data Source=alonya-pc;Initial Catalog=edge_system291;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
 		<add name="Edge.Core.Services.SystemDatabase" connectionString="Data Source=alonya-pc; Database=edge_system291;User ID=sa;PWD=Iuh2sstd"/>
 		<add name="Edge.Data.Pipeline.Delivery.Sql.DeliveriesDb" connectionString="Data Source=alonya-pc;Initial Catalog=Deliveries;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
