--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -198,7 +198,7 @@
 			<!--<appender-ref ref="SmtpAppender" />-->
 		</root>
 	</log4net>
-	<!--<system.diagnostics>
+	<system.diagnostics>
 		<sources>
 			<source name="System.ServiceModel"
                     switchValue="All"
@@ -210,5 +210,5 @@
 				</listeners>
 			</source>
 		</sources>
-	</system.diagnostics>-->
+	</system.diagnostics>
 </configuration>
