--- a/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
+++ b/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
@@ -917,7 +917,7 @@
 			</netTcpBinding>
 		</bindings>
 	</system.serviceModel>
-	<!--<system.diagnostics>
+	<system.diagnostics>
 		<sources>
 			<source name="System.ServiceModel"
                     switchValue="All"
@@ -929,6 +929,6 @@
 				</listeners>
 			</source>
 		</sources>
-	</system.diagnostics>-->
+	</system.diagnostics>
 </configuration>
 
