--- a/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
+++ b/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
@@ -19,6 +19,7 @@
 		<add key="Edge.Core.Scheduling.Scheduler.IntervalBetweenNewSchedule" value="00:10:00" />
 		<add key="Edge.Core.Scheduling.Scheduler.FindServicesToRunInterval" value="00:01" />
 		<add key="Edge.Core.Scheduling.Scheduler.DeleteEndedServiceInterval" value="23:59:00" />
+		<add key="Edge.Data.Pipeline.Metrics.AdMetrics.AdMetricsImportManager.BufferSize" value="10"/>
 	</appSettings>
 	<connectionStrings>
 		<add name ="Edge.Processes.SchedulingHost.SchedulingHost.System" connectionString="Data Source=alonya-pc;Initial Catalog=edge_system291;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
@@ -151,8 +152,8 @@
 					SQL.RollbackCommand="SP_Delivery_Rollback_By_DeliveryID(@DeliveryID:NvarChar,@TableName:NvarChar)"
 					SQL.CommitCommand="SP_Delivery_Insert_Facebook(@DeliveryFileName:NvarChar,@CommitTableName:NvarChar,@MeasuresNamesSQL:NvarChar,@MeasuresFieldNamesSQL:NvarChar,@Signature:NvarChar,@DeliveryIDsPerSignature:NvarChar,@DeliveryID:NvarChar)"
 					    MaxExecutionTime="00:40:00"
-					     MaxInstances="1"
-				         MaxInstancesPerAccount="1"
+					     MaxInstances="3"
+				         MaxInstancesPerAccount="3"
 				        ConflictBehavior="Ignore">
 				<Workflow>
 					<Step Base="FacebookGraphApiInitializerService" />
@@ -165,9 +166,9 @@
 				</Workflow>				
 			</Service>
 
-			<Service Name="FacebookGraphApiInitializerService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.InitializerService,Edge.Services.Facebook.GraphApi" MaxInstances="1"	MaxInstancesPerAccount="1"/>
-			<Service Name="FacebookGraphApiRetrieverService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.RetrieverService,Edge.Services.Facebook.GraphApi" MaxInstances="2" 	MaxInstancesPerAccount="2"/>
-			<Service Name="FacebookGraphApiProcessorService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.ProcessorService,Edge.Services.Facebook.GraphApi" AutoAdGroupSegment="true" AdGroupDelimiter="@" MaxInstances="4"	MaxInstancesPerAccount="1"/>
+			<Service Name="FacebookGraphApiInitializerService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.InitializerService,Edge.Services.Facebook.GraphApi" MaxInstances="100"	MaxInstancesPerAccount="100"/>
+			<Service Name="FacebookGraphApiRetrieverService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.RetrieverService,Edge.Services.Facebook.GraphApi" MaxInstances="1" 	MaxInstancesPerAccount="1"/>
+			<Service Name="FacebookGraphApiProcessorService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.ProcessorService,Edge.Services.Facebook.GraphApi" AutoAdGroupSegment="true"  AdGroupDelimiter="@" MaxInstances="1"	MaxInstancesPerAccount="1"/>
 
 		
 			<Service Name="ImportDeliveryData" Class="Edge.Applications.ImportDataFromDB4oUtill.ImportDeliveryDataService,Edge.Applications.ImportDataFromDB4oUtill"/>
