--- a/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
+++ b/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
@@ -49,7 +49,7 @@
 		<Services>
 
 			<Service Name="Rerun" IsPublic="true" Class="Edge.Data.Pipeline.Services.RerunService,Edge.Data.Pipeline" />
-			<Service Name="AdMetricsCommit" IsPublic="false" Class="Edge.Services.AdMetrics.CommitService,Edge.Services.AdMetrics" MaxInstances="1"	MaxInstancesPerAccount="1"/>
+			<Service Name="AdMetricsStaging" IsPublic="false" Class="Edge.Data.Pipeline.Metrics.Services.MetricsStagingService,Edge.Data.Pipeline.Metrics" MaxInstances="1"	MaxInstancesPerAccount="1"/>
 
 			<!--ValidationServices-->
 			<Service Name="OltpDeliveryValidation"
@@ -128,7 +128,7 @@
 					<Step Name="Initializer" Base="Microsoft.AdCenter.Initializer" IsEnabled="true"/>
 					<Step Name="Retriever" Base="Microsoft.AdCenter.Retriever" IsEnabled="true"/>
 					<Step Name="Processor" Base="Microsoft.AdCenter.Processor" IsEnabled="true"/>
-					<Step Base="AdMetricsCommit" IsEnabled="true"/>
+					<Step Base="AdMetricsStaging" IsEnabled="true"/>
 				</Workflow>
 				<SchedulingRules>
 				<Rule ExactTimes="13:00" CalendarUnit="Day" MaxDeviation="00:25"  />
@@ -148,9 +148,9 @@
 						Facebook.Auth.ApiKey="168436873232861"
 						Facebook.Auth.AppSecret="dada52b15e6d57e30f089a8ea94cf970"
 						Facebook.Auth.RedirectUri="http://www.seperia.com/"
-					SQL.PrepareCommand="SP_Delivery_Commit_Facebook(@DeliveryID:NvarChar,@DeliveryTablePrefix:NvarChar,@MeasuresNamesSQL:NvarChar,@MeasuresFieldNamesSQL:NvarChar,?CommitTableName:NvarChar)"
-					SQL.RollbackCommand="SP_Delivery_Rollback_By_DeliveryID(@DeliveryID:NvarChar,@TableName:NvarChar)"
-					SQL.CommitCommand="SP_Delivery_Insert_Facebook(@DeliveryFileName:NvarChar,@CommitTableName:NvarChar,@MeasuresNamesSQL:NvarChar,@MeasuresFieldNamesSQL:NvarChar,@Signature:NvarChar,@DeliveryIDsPerSignature:NvarChar,@DeliveryID:NvarChar)"
+						SQL.TransformCommand="SP_Delivery_Transform_Facebook_Generic(@DeliveryID:NvarChar,@DeliveryTablePrefix:NvarChar,@MeasuresNamesSQL:NvarChar,@MeasuresFieldNamesSQL:NvarChar,@CommitTableName:NvarChar)"
+						SQL.RollbackCommand="SP_Delivery_Rollback_By_DeliveryOutputID_v291(@DeliveryOutputID:NvarChar,@TableName:NvarChar)"
+						SQL.StageCommand="SP_Delivery_Stage_Facebook(@DeliveryFileName:NvarChar,@CommitTableName:NvarChar,@MeasuresNamesSQL:NvarChar,@MeasuresFieldNamesSQL:NvarChar,@OutputIDsPerSignature:NvarChar,@DeliveryID:NvarChar)"
 					    MaxExecutionTime="00:40:00"
 					     MaxInstances="3"
 				         MaxInstancesPerAccount="3"
@@ -159,10 +159,10 @@
 					<Step Base="FacebookGraphApiInitializerService" />
 					<Step Base="FacebookGraphApiRetrieverService"  />
 					<Step Base="FacebookGraphApiProcessorService"  />
-					<!--<Step Base="AdMetricsCommit"/>
+					<Step Base="AdMetricsStaging" ImportManagerType="Edge.Data.Pipeline.Metrics.AdMetrics.AdMetricsImportManager,Edge.Data.Pipeline.Metrics"/>
 					<Step Base="DataChecks.OltpDelivery"  IsEnabled="false" SourceTable="dbo.Paid_API_AllColumns_v29" ChannelList="1"/>
 					<Step Base="DataChecks.ResultsHandler"  IsEnabled="false" AlertFrom="edgeapp@edge.bi" AlertTo="edge.alerts@seperia.com"
-						  CC="sms-0522321243@outlook.wms.telemessage.com,sms-0542444443@outlook.wms.telemessage.com,sms-0544922188@outlook.wms.telemessage.com,shmely@gmail.com,sms-0522499272@outlook.wms.telemessage.com" />-->
+						  CC="sms-0522321243@outlook.wms.telemessage.com,sms-0542444443@outlook.wms.telemessage.com,sms-0544922188@outlook.wms.telemessage.com,shmely@gmail.com,sms-0522499272@outlook.wms.telemessage.com" />
 				</Workflow>				
 			</Service>
 
