--- a/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
+++ b/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
@@ -2,7 +2,7 @@
 <configuration>
 
 	<configSections>
-		<section name="edge.services" type="Edge.Core.Configuration.EdgeServicesConfiguration, Edge.Core" />
+		<section name="edge.services" type="Edge.Core.Services.Configuration.EdgeServicesConfiguration, Edge.Core" />
 	</configSections>
 	<appSettings>
 		<add key="Edge.Core.Services.Service.BaseListeningUrl" value="net.tcp://localhost:3536/{0}"/>
