--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -5,15 +5,15 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
 	</configSections>
 	<appSettings>
-		<add key="Edge.Core.Scheduling.Scheduler.Percentile" value="80"/>
-		<add key="Edge.Core.Scheduling.Scheduler.NeededScheduleTimeLine" value="02:00:00"/>
-		<add key="Edge.Core.Scheduling.Scheduler.IntervalBetweenNewSchedule" value="00:00:10"/>
-		<add key="Edge.Core.Scheduling.Scheduler.FindServicesToRunInterval" value="00:00:15"/>
-		<add key="Edge.Core.Scheduling.Scheduler.DeleteEndedServiceInterval" value="23:59:00"/>
-		<add key="Edge.Processes.SchedulingHost.ISchedulingCommunication" value="net.pipe://localhost/"/>
-		<add key="Edge.Core.Scheduling.Scheduler.MaxExecutionTimeProduct" value="2.1"/>
-		<add key="Edge.Core.Scheduling.Scheduler.MaxExecutionTimeParentService" value="20"/>
-		<add key="Edge.Core.Scheduling.Scheduler.MaxExecutionTimeChildService" value="4"/>
+		<add key="Edge.Core.Services.Scheduling.Scheduler.Percentile" value="80"/>
+		<add key="Edge.Core.Services.Scheduling.Scheduler.NeededScheduleTimeLine" value="02:00:00"/>
+		<add key="Edge.Core.Services.Scheduling.Scheduler.IntervalBetweenNewSchedule" value="00:00:10"/>
+		<add key="Edge.Core.Services.Scheduling.Scheduler.FindServicesToRunInterval" value="00:00:15"/>
+		<add key="Edge.Core.Services.Scheduling.Scheduler.DeleteEndedServiceInterval" value="23:59:00"/>
+		<add key="Edge.Core.Services.Scheduling.Scheduler.ISchedulingCommunication" value="net.pipe://localhost/"/>
+		<add key="Edge.Core.Services.Scheduling.Scheduler.MaxExecutionTimeProduct" value="2.1"/>
+		<add key="Edge.Core.Services.Scheduling.Scheduler.MaxExecutionTimeParentService" value="20"/>
+		<add key="Edge.Core.Services.Scheduling.Scheduler.MaxExecutionTimeChildService" value="4"/>
 		<add key="log4net.Internal.Debug" value="true"/>
 	</appSettings>
 	<connectionStrings>
