--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -19,46 +19,55 @@
 	<connectionStrings>
 		<add name="Edge.Core.Scheduling.Scheduler.OLTP" connectionString="Data Source=alonya-pc;Initial Catalog=testdb;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
 		<add name="Edge.Core.Scheduling.Scheduler.System" connectionString="Data Source=alonya-pc;Initial Catalog=Edge_System291;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
-		
+
 	</connectionStrings>
 
 	<system.serviceModel>
+		<protocolMapping>
+			<add scheme="http" binding="webHttpBinding"/>
+		</protocolMapping>
 		<services>
-			<service behaviorConfiguration="behavior" name="Edge.Processes.SchedulingHost.Listener">
-				<endpoint address="http://localhost:27334/v291/ScheduleManagerSeperia"
-					binding="wsHttpBinding" bindingConfiguration="edgeServiceWebBinding"
-					contract="Edge.Core.Scheduling.IScheduleManager"
-				/>
-			</service>
-			<service name="Edge.Processes.SchedulingHost.SchedulingHost">
+			<service name="Edge.Core.Services.ServiceExecutionHost" behaviorConfiguration="Edge.Core.Services.ServiceExecutionHost">
 				<endpoint
-					address="net.pipe://localhost/Scheduler"
-					binding="netNamedPipeBinding"
-					bindingConfiguration="Edge.Processes.SchedulingHost.SchedulingHost"
-					contract="Edge.Core.Scheduling.ISchedulingHost"
+					name="Default"
+					binding="netTcpBinding"
+					bindingConfiguration="Edge.Core.Services.ServiceExecutionHost"
+					contract="Edge.Core.Services.IServiceExecutionHost"
+					address="net.tcp://localhost:3535/{hostName}"
 				/>
 			</service>
 		</services>
-
 		<client>
 			<endpoint binding="wsHttpBinding" bindingConfiguration="edgeServiceWebBinding" contract="Edge.Core.Scheduling.IScheduleManager" address="http://localhost:27334/v291/ScheduleManagerSeperia"/>
 			<!--<endpoint address="https://adcenterapi.microsoft.com/Api/Advertiser/V8/Reporting/ReportingService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReportingService" contract="AdCenter.Reporting.IReportingService" name="AdCenter.Reporting.IReportingService"/>-->
 		</client>
 		<behaviors>
+					
 			<serviceBehaviors>
-				<behavior name="behavior">
+				<behavior name="Edge.Core.Services.ServiceExecutionHost">
 					<serviceMetadata httpGetEnabled="false"/>
 					<serviceDebug includeExceptionDetailInFaults="true"/>
 				</behavior>
 			</serviceBehaviors>
 		</behaviors>
 		<bindings>
-			<wsHttpBinding>
-				<binding name="edgeServiceWebBinding" sendTimeout="0:05:00" receiveTimeout="0:05:00"/>
-			</wsHttpBinding>
 			<netTcpBinding>
+				<binding name="Edge.Core.Services.ServiceExecutionHost"
+						 portSharingEnabled="true"
+						 maxBufferPoolSize="20000000"
+						 maxConnections="20000000"
+						 maxBufferSize="20000000"
+						 maxReceivedMessageSize="20000000"
+						 receiveTimeout="01:00:30"
+						 sendTimeout="01:00:30"
+						 closeTimeout="01:00:30"
+						 openTimeout="01:00:30"
+						 />
 				<binding name="Edge.Core.Services.Service.InstanceToEngineBinding" portSharingEnabled="true" receiveTimeout="1:0:0"/>
 			</netTcpBinding>
+			<wsHttpBinding>
+				<binding name="edgeServiceWebBinding" sendTimeout="0:05:00" receiveTimeout="0:05:00"/>
+			</wsHttpBinding>			
 			<basicHttpBinding>
 				<binding name="BasicHttpBinding_IReportingService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
 					<readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
@@ -68,15 +77,11 @@
 					</security>
 				</binding>
 			</basicHttpBinding>
-			<netNamedPipeBinding>
-				<binding name="Edge.Processes.SchedulingHost.SchedulingHost"  maxBufferPoolSize="20000000" maxConnections="20000000" maxBufferSize="20000000" maxReceivedMessageSize="20000000" closeTimeout="00:03:00" openTimeout="00:03:00" />
-			</netNamedPipeBinding>
 		</bindings>
 	</system.serviceModel>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
 	</startup>
-
 
 	<log4net debug="true">
 		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -93,7 +98,7 @@
 		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
 			<bufferSize value="1" />
 			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-			 Data Source=alonya-pc;Initial Catalog=Edge_System;Integrated Security=false;User ID=sa;PWD=Iuh2sstd 
+			Data Source=alonya-pc;Initial Catalog=Edge_System;Integrated Security=false;User ID=sa;PWD=Iuh2sstd
 			<connectionString value="data source=alonya-pc;initial catalog=Edge_System291;integrated security=false;persist security info=True;User ID=sa;Password=Iuh2sstd" />
 			<commandText value="INSERT INTO Log ([DateRecorded],[MachineName],[ProcessID],[Source],[MessageType],[ServiceInstanceID],[AccountID],[Message],[IsException],[ExceptionDetails]) &#xD;&#xA;           VALUES (@dateRecorded, @machineName, @processID, @source, @messageType, @serviceInstanceID,@accountID,@message,@isException,@exceptionDetails)"
                                                                                                                                                            />
