--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -207,14 +207,40 @@
 	<system.diagnostics>
 		<sources>
 			<source name="System.ServiceModel"
-                    switchValue="All"
-                    propagateActivity="true">
+					switchValue="Information, ActivityTracing"
+					propagateActivity="true" >
 				<listeners>
-					<add name="traceListener"
-						type="System.Diagnostics.XmlWriterTraceListener"
-						initializeData= "d:\log\Traces.svclog" />
+					<add name="xml"/>
+				</listeners>
+			</source>
+			<source name="System.ServiceModel.MessageLogging">
+				<listeners>
+					<add name="xml"/>
+				</listeners>
+			</source>
+			<source name="myUserTraceSource"
+					switchValue="Information, ActivityTracing">
+				<listeners>
+					<add name="xml"/>
 				</listeners>
 			</source>
 		</sources>
+		<sharedListeners>
+			<add name="xml"
+				 type="System.Diagnostics.XmlWriterTraceListener"
+					   initializeData="Traces.svclog" />
+		</sharedListeners>
 	</system.diagnostics>
+
+	<system.serviceModel>
+		<diagnostics wmiProviderEnabled="true">
+			<messageLogging
+				 logEntireMessage="true"
+				 logMalformedMessages="true"
+				 logMessagesAtServiceLevel="true"
+				 logMessagesAtTransportLevel="true"
+				 maxMessagesToLog="3000"
+       />
+		</diagnostics>
+	</system.serviceModel>
 </configuration>
