--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -27,30 +27,50 @@
 			<add scheme="http" binding="webHttpBinding"/>
 		</protocolMapping>
 		<services>
-			<service name="Edge.Core.Services.ServiceExecutionHost" behaviorConfiguration="Edge.Core.Services.ServiceExecutionHost">
+			<service name="Edge.Core.Services.ServiceExecutionHost" behaviorConfiguration="EdgeDefault">
 				<endpoint
-					name="Default"
+					name="Edge.Core.Services.ServiceExecutionHost"
 					binding="netTcpBinding"
-					bindingConfiguration="Edge.Core.Services.ServiceExecutionHost"
+					bindingConfiguration="EdgeDefault"
 					contract="Edge.Core.Services.IServiceExecutionHost"
 					address="net.tcp://localhost:3535/{hostName}"
 				/>
 			</service>
+			<service name="Edge.Core.Services.ServiceEnvironment" behaviorConfiguration="EdgeDefault">
+				<endpoint
+					name="Edge.Core.Services.ServiceEnvironment"
+					binding="netTcpBinding"
+					bindingConfiguration="EdgeDefault"
+					contract="Edge.Core.Services.IServiceEnvironmentEventListener"
+					address="net.tcp://localhost:3636/{guid}"
+				/>
+			</service>
 		</services>
 		<client>
+			<endpoint
+					name="Edge.Core.Services.ServiceExecutionHost"
+					binding="netTcpBinding"
+					bindingConfiguration="EdgeDefault"
+					contract="Edge.Core.Services.IServiceExecutionHost"
+				/>
+			<endpoint
+					name="Edge.Core.Services.ServiceEnvironment"
+					binding="netTcpBinding"
+					bindingConfiguration="EdgeDefault"
+					contract="Edge.Core.Services.IServiceEnvironmentEventListener"
+				/>
 		</client>
 		<behaviors>
-					
 			<serviceBehaviors>
-				<behavior name="Edge.Core.Services.ServiceExecutionHost">
+				<behavior name="EdgeDefault">
 					<serviceMetadata httpGetEnabled="false"/>
 					<serviceDebug includeExceptionDetailInFaults="true"/>
 				</behavior>
-			</serviceBehaviors>
+			</serviceBehaviors>			
 		</behaviors>
 		<bindings>
 			<netTcpBinding>
-				<binding name="Edge.Core.Services.ServiceExecutionHost"
+				<binding name="EdgeDefault"
 						 portSharingEnabled="true"
 						 maxBufferPoolSize="20000000"
 						 maxConnections="20000000"
