--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -27,6 +27,15 @@
 			<add scheme="http" binding="webHttpBinding"/>
 		</protocolMapping>
 		<services>
+			<service name="Edge.Core.Services.Scheduling.Scheduler" behaviorConfiguration="EdgeDefault">
+				<endpoint
+					name="Edge.Core.Services.Scheduling.Scheduler"
+					binding="webHttpBinding"
+					bindingConfiguration="profiles"
+					contract="Edge.Core.Services.Scheduling.ISchedulerDataService"
+					address="http://localhost:9000/"
+				/>
+			</service>
 			<service name="Edge.Core.Services.ServiceExecutionHost" behaviorConfiguration="EdgeDefault">
 				<endpoint
 					name="Edge.Core.Services.ServiceExecutionHost"
@@ -75,13 +84,26 @@
 						 maxBufferPoolSize="20000000"
 						 maxConnections="20000000"
 						 maxBufferSize="20000000"
-						 maxReceivedMessageSize="20000000"
+						 maxReceivedMessageSize="20000000"						 
 						 receiveTimeout="01:00:30"
 						 sendTimeout="01:00:30"
 						 closeTimeout="01:00:30"
 						 openTimeout="01:00:30"
 						 />
 			</netTcpBinding>
+			<webHttpBinding>
+				<binding name="profiles"
+						 maxBufferPoolSize="2147483647"
+						 maxBufferSize="2147483647"
+						 maxReceivedMessageSize="2147483647"
+						 
+						 receiveTimeout="01:00:30"
+						 sendTimeout="01:00:30"
+						 closeTimeout="01:00:30"
+						 openTimeout="01:00:30">
+					<readerQuotas maxArrayLength="2147483647"  maxStringContentLength="2147483647" maxDepth="32" maxNameTableCharCount="2147483647" maxBytesPerRead ="2147483647"/>
+				</binding>
+			</webHttpBinding>
 			<basicHttpBinding>
 				<binding name="BasicHttpBinding_IReportingService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
 					<readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
@@ -253,7 +275,8 @@
 				 logMalformedMessages="true"
 				 logMessagesAtServiceLevel="true"
 				 logMessagesAtTransportLevel="true"
-				 maxMessagesToLog="3000"
+				 maxMessagesToLog="9999999"
+				 maxSizeOfMessageToLog="999999999"
        />
 		</diagnostics>
 	</system.serviceModel>
