--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -27,15 +27,15 @@
 			<add scheme="http" binding="webHttpBinding"/>
 		</protocolMapping>
 		<services>
-			<service name="Edge.Core.Services.Scheduling.Scheduler" behaviorConfiguration="EdgeDefault">
+			<!--<service name="Edge.Core.Services.Scheduling.Scheduler" behaviorConfiguration="bla">
 				<endpoint
 					name="Edge.Core.Services.Scheduling.Scheduler"
 					binding="webHttpBinding"
-					bindingConfiguration="profiles"
+					bindingConfiguration="profiles"					
 					contract="Edge.Core.Services.Scheduling.ISchedulerDataService"
 					address="http://localhost:9000/"
 				/>
-			</service>
+			</service>-->
 			<service name="Edge.Core.Services.ServiceExecutionHost" behaviorConfiguration="EdgeDefault">
 				<endpoint
 					name="Edge.Core.Services.ServiceExecutionHost"
@@ -52,6 +52,7 @@
 					bindingConfiguration="EdgeDefault"
 					contract="Edge.Core.Services.IServiceEnvironmentEventListener"
 					address="net.tcp://localhost:3636/{guid}"
+					
 				/>
 			</service>
 		</services>
@@ -74,6 +75,12 @@
 				<behavior name="EdgeDefault">
 					<serviceMetadata httpGetEnabled="false"/>
 					<serviceDebug includeExceptionDetailInFaults="true"/>
+					
+				</behavior>
+				<behavior name="bla">
+					<serviceDebug includeExceptionDetailInFaults="true" httpsHelpPageUrl="true" />
+					<dataContractSerializer maxItemsInObjectGraph="6553600"/>
+					
 				</behavior>
 			</serviceBehaviors>			
 		</behaviors>
