last commit on edge

--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -27,6 +27,14 @@
 			<add scheme="http" binding="webHttpBinding"/>
 		</protocolMapping>
 		<services>
+			<service name="Edge.Processes.SchedulingHost.SchedulingHost">
+				<endpoint
+					address="net.pipe://localhost/Scheduler"
+					binding="netNamedPipeBinding"
+					bindingConfiguration="Edge.Processes.SchedulingHost.SchedulingHost"
+					contract="Edge.Core.Scheduling.ISchedulingHost"
+				/>
+			</service>
 			<!--<service name="Edge.Core.Services.Scheduling.Scheduler" behaviorConfiguration="bla">
 				<endpoint
 					name="Edge.Core.Services.Scheduling.Scheduler"
@@ -82,6 +90,10 @@
 					<dataContractSerializer maxItemsInObjectGraph="6553600"/>
 					
 				</behavior>
+				<behavior name="behavior">
+					<serviceMetadata httpGetEnabled="false"/>
+					<serviceDebug includeExceptionDetailInFaults="true"/>
+				</behavior>
 			</serviceBehaviors>			
 		</behaviors>
 		<bindings>
@@ -120,6 +132,9 @@
 					</security>
 				</binding>
 			</basicHttpBinding>
+			<netNamedPipeBinding>
+				<binding name="Edge.Processes.SchedulingHost.SchedulingHost"  maxBufferPoolSize="20000000" maxConnections="20000000" maxBufferSize="20000000" maxReceivedMessageSize="20000000" closeTimeout="00:03:00" openTimeout="00:03:00" />
+			</netNamedPipeBinding>
 		</bindings>
 	</system.serviceModel>
 	<startup>
